--- a/all.css
+++ b/all.css
@@ -1,4 +1,4 @@
-.fa,
+/* .fa,
 .fas,
 .far,
 .fal,
@@ -3802,4 +3802,4 @@ readers do not read off random characters that represent icons */
 .fa,
 .fas {
   font-family: 'Font Awesome 5 Free';
-  font-weight: 900; }
+  font-weight: 900; } */
