--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
   --mainYellow: rgb(249, 228, 148);
   --mainWhite: #fff;
   --mainBlack: #000;
-  --yellowTrans: rgba(249, 228, 148, 0.5);
+  --yellowTrans: rgba(102, 22, 207, 0.5);
   --mainGrey: rgb(238, 238, 238);
 }
 
@@ -58,7 +58,7 @@ body {
 .max-height {
   min-height: calc(100vh - 76px);
   background: linear-gradient(var(--yellowTrans), var(--yellowTrans)),
-    url("../img/headerBcg.jpeg") center/cover fixed no-repeat;
+    url("images/ours.jpg") center/cover fixed no-repeat;
   position: relative;
 }
 .banner {
@@ -217,7 +217,7 @@ body {
 }
 .lightbox-item {
   min-height: 80vh;
-  background: url("../img/cake-1.jpeg") center/cover fixed no-repeat;
+  background: url("images/booy.jpg") center/cover fixed no-repeat;
   border-radius: 0.3rem;
 }
 .lightbox-close {
